EIP1-493 - Controller exception handler changes to support returning an error response body
